# yanzhiti

./: .git_commit_msg.txt  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE.md  README.en.md  README.md  SECURITY.md  SUPPORT.md  build_unix.sh  build_windows.bat  create_promo_video.py  demo_run.py  publish_pypi.bat  push_to_github.bat  pyproject.toml  quickstart.sh  run_local_demo.sh  test_local.py
.github/: PROFILE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs_improvement.md  feature_request.md
.github/workflows/: ci-cd.yml
docs/: ABOUT.md  ARCHITECTURE.md  BUILDING.md  CODE_QUALITY_IMPROVEMENTS.md  DEV_LOG.md  GITHUB_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTING_TOOLS.md  OPTIMIZATION_SUMMARY.md  PENDING_PUSH.md  PROGRESS.md  QUICKSTART.md  RELEASE_PLAN.md  TOP10_IMPROVEMENT_PLAN.md  VISION.md
examples/: README.md  advanced_usage.py  basic_usage.py
examples/api_integration/: README.md
examples/automation/: README.md
examples/code_generation/: README.md  quick_sort.py
examples/data_processing/: README.md
examples/file_operations/: README.md  batch_rename.py
examples/git_integration/: README.md  auto_commit.py
examples/web_development/: README.md
marketing/: create_promo_video.py  promo.html
src/claude_code/: __init__.py
src/claude_code/cli/: __init__.py  local_main.py  main.py  web_main.py
src/claude_code/core/: __init__.py  agent.py  context.py  local_query_engine.py  mcp.py  mlx_client.py  permissions.py  query_engine.py  session.py  tool.py
src/claude_code/tools/: __init__.py  advanced_tools.py  complete_tools.py  file_tools.py  git_tools.py  missing_tools.py  shell_tools.py  task_tools.py  web_tools.py
src/claude_code/utils/: __init__.py  logging.py
src/claude_code/web/: __init__.py  server.py
src/yanzhiti/: __init__.py
src/yanzhiti/cli/: __init__.py  diagnose.py  extended_commands.py  gui_launcher.py  local_main.py  main.py  setup_wizard.py  unified_main.py  web_main.py
src/yanzhiti/core/: __init__.py  agent.py  builtin_models.py  context.py  lm_studio_client.py  local_query_engine.py  mcp.py  mlx_client.py  permissions.py  providers.py  query_engine.py  session.py  tool.py  unified_engine.py
src/yanzhiti/tools/: __init__.py  advanced_tools.py  complete_tools.py  file_tools.py  git_tools.py  missing_tools.py  shell_tools.py  task_tools.py  web_tools.py
src/yanzhiti/types/: __init__.py
src/yanzhiti/utils/: __init__.py  config.py  logging.py
src/yanzhiti/web/: __init__.py  server.py
src/yanzhiti/web/static/: index.html
tests/: test_core.py  test_tools.py
