[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yanzhiti"
version = "1.0.0"
description = "衍智体 (YANZHITI) - AI-Powered Intelligent Code Assistant"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "YANZHITI Team", email = "yanzhiti@example.com" }
]
keywords = [
    "yanzhiti",
    "ai",
    "cli",
    "code-assistant",
    "llm",
    "intelligent-code"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.18.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.0.0",
    "watchdog>=3.0.0",
    "prompt-toolkit>=3.0.0",
    "questionary>=2.0.0",
    "typing-extensions>=4.9.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ipython>=8.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]
mlx = [
    "mlx>=0.0.8",
    "mlx-lm>=0.0.7",
]
all = [
    "claude-code[dev,docs,mlx]",
]

[project.scripts]
yanzhiti = "yanzhiti.cli.main:main"
yzt = "yanzhiti.cli.main:main"
yanzhiti-local = "yanzhiti.cli.local_main:main"
yzt-local = "yanzhiti.cli.local_main:main"
yanzhiti-web = "yanzhiti.cli.web_main:main"
yzt-web = "yanzhiti.cli.web_main:main"

[project.urls]
Homepage = "https://github.com/yanzhiti/yanzhiti"
Documentation = "https://yanzhiti.github.io/yanzhiti"
Repository = "https://github.com/yanzhiti/yanzhiti.git"
Issues = "https://github.com/yanzhiti/yanzhiti/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/yanzhiti"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip without strict
]

[tool.ruff.isort]
known-first-party = ["yanzhiti"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/yanzhiti --cov-report=term-missing"
asyncio_mode = "auto"
