[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# ============================================================
# 📦 源码包配置 | Source Package Configuration
# ============================================================
[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
yanzhiti = ["web/static/*"]

# ============================================================
# 📦 项目元数据 | Project Metadata
# ============================================================
[project]
name = "yanzhiti"
version = "2.2.0"
description = "衍智体 YANZHITI - AI 智能编程助手，支持 17+ AI 供应商"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "YANZHITI Team", email = "yanzhiti@proton.me" }
]
maintainers = [
    { name = "Minglin Li", email = "linney@163.com" }
]
keywords = [
    "ai", "llm", "code-assistant", "coding", "cli", "chatbot",
    "openai", "anthropic", "deepseek", "ollama", "local-llm",
    "programming", "developer-tools", "intelligent-code",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.26.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "questionary>=2.0.0",
    "prompt-toolkit>=3.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "aiofiles>=23.0.0",
    "jinja2>=3.1.0",
    "typing-extensions>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0", "pytest-asyncio>=0.23.0", "pytest-cov>=4.1.0",
    "ruff>=0.1.0", "mypy>=1.8.0", "pre-commit>=3.6.0", "ipython>=8.0.0",
]
anthropic = ["anthropic>=0.18.0"]
openai = ["openai>=1.10.0"]
google = ["google-generativeai>=0.5.0"]
mlx = ["mlx>=0.0.8", "mlx-lm>=0.0.7"]
build = ["build>=1.0.0", "twine>=5.0.0"]
package = ["pyinstaller>=6.0"]
all = ["yanzhiti[dev,anthropic,openai,google,mlx]"]

[project.scripts]
yzt = "yanzhiti.cli.main:main"
yanzhiti = "yanzhiti.cli.main:main"
yzt-local = "yanzhiti.cli.local_main:main"
yanzhiti-local = "yanzhiti.cli.local_main:main"
yzt-web = "yanzhiti.cli.web_main:main"
yanzhiti-web = "yanzhiti.cli.web_main:main"
yzt-setup = "yanzhiti.cli.setup_wizard:main"
yzt-diagnose = "yanzhiti.cli.diagnose:main"

[project.urls]
Homepage = "https://github.com/yanzhiti/yanzhiti"
Documentation = "https://github.com/yanzhiti/yanzhiti#readme"
Repository = "https://github.com/yanzhiti/yanzhiti.git"
Issues = "https://github.com/yanzhiti/yanzhiti/issues"
Discussions = "https://github.com/yanzhiti/yanzhiti/discussions"
Changelog = "https://github.com/yanzhiti/yanzhiti/blob/main/CHANGELOG.md"

# ============================================================
# 🎨 代码格式化 | Code Formatting (Black)
# ============================================================
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

# ============================================================
# 🔍 Lint 配置 | Lint Configuration (Ruff)
# ============================================================
[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM",
]
ignore = [
    "E501",
    "B008",
    "B905",
]

[tool.ruff.isort]
known-first-party = ["yanzhiti"]

# ============================================================
# 🔎 类型检查 | Type Checking (MyPy)
# ============================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

# ============================================================
# 🧪 测试配置 | Test Configuration (Pytest)
# ============================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/yanzhiti --cov-report=term-missing"
asyncio_mode = "auto"
